# DPO_AIO

./: .mxproject  DPO_AIO.ioc
Core/Inc/: MyLib.h  TLC5952.h  Views.h  main.h  mpu6050.h  st7789.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  ws2812.h  ws2812_rom_table.h
Core/Src/: MyLib.c  TLC5952.c  Views.c  fonts.c  ft6336.c  main.c  mpu6050.c  st7789.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  ws2812.c
MDK-ARM/: .clangd  DPO_AIO+DPO_AIO.cbuild-run.yml  DPO_AIO+DPO_AIO.cbuild.yml  DPO_AIO.cbuild-idx.yml  DPO_AIO.cbuild-pack.yml  DPO_AIO.cbuild-set.yml  DPO_AIO.code-workspace  DPO_AIO.cproject.yml  DPO_AIO.csolution.yml  DPO_AIO.uvguix.87407  DPO_AIO.uvoptx  DPO_AIO.uvprojx  startup_stm32g474xx.lst
MDK-ARM/.eide/: eide.json  env.ini  files.options.yml
MDK-ARM/DPO_AIO/: DPO_AIO.axf  DPO_AIO.build_log.htm  DPO_AIO.hex  DPO_AIO.htm  DPO_AIO.lnp  DPO_AIO.map  DPO_AIO_DPO_AIO.dep  aht20.d  basicmathfunctions.d  basicmathfunctionsf16.d  bayesfunctions.d  bayesfunctionsf16.d  commontables.d  commontablesf16.d  complexmathfunctions.d  complexmathfunctionsf16.d  controllerfunctions.d  distancefunctions.d  distancefunctionsf16.d  fastmathfunctions.d  fastmathfunctionsf16.d  filteringfunctions.d  filteringfunctionsf16.d  fonts.d  ft6336.d  interpolationfunctions.d  interpolationfunctionsf16.d  main.crf  main.d  matrixfunctions.d  matrixfunctionsf16.d  mpu6050.d  mylib.d  quaternionmathfunctions.d  st7789.d  startup_stm32g474xx.d  statisticsfunctions.d  statisticsfunctionsf16.d  stm32g4xx_hal.crf  stm32g4xx_hal.d  (+70 more)
MDK-ARM/FPGA/: DDS.gprj  sin_wave_generator.py
MDK-ARM/FPGA/impl/: DDS_process_config.json  led_flash_process_config.json  project_process_config.json
MDK-ARM/FPGA/impl/gwsynthesis/: DDS.prj  DDS.vg  DDS_syn.rpt.html  DDS_syn_resource.html  DDS_syn_rsc.xml  led_flash.prj  led_flash.vg  led_flash_syn.rpt.html  led_flash_syn_resource.html  led_flash_syn_rsc.xml
MDK-ARM/FPGA/impl/gwsynthesis/RTL_GAO/: gw_gao_top.v
MDK-ARM/FPGA/impl/gwsynthesis/RTL_GAO/ao_0/: gw_ao_init.v  gw_ao_parameter.v  gw_ao_top_define.v
MDK-ARM/FPGA/impl/pnr/: DDS.binx  DDS.db  DDS.p  DDS.pin.html  DDS.power.html  DDS.pr  DDS.rpt.html  DDS.rpt.txt  DDS.timing_paths  DDS.tr.html  DDS_tr_cata.html  DDS_tr_content.html  ao_0.binx  cmd.do  device.cfg  led_flash.binx  led_flash.db  led_flash.p  led_flash.pin.html  led_flash.power.html  led_flash.pr  led_flash.rpt.html  led_flash.rpt.txt  led_flash.timing_paths  led_flash.tr.html  led_flash_tr_cata.html  led_flash_tr_content.html
MDK-ARM/FPGA/impl/temp/: rtl_parser.result  rtl_parser_arg.json
MDK-ARM/FPGA/src/: DDS.rao  TOP.v  dds.v  led_flash.cst  led_flash.v  spi_slave.v  uart_tx_core.v  uart_tx_string.v
MDK-ARM/FPGA/src/gowin_pll/: gowin_pll.ipc  gowin_pll.mod  gowin_pll.v  gowin_pll_tmp.v
MDK-ARM/RTE/_DPO_AIO/: RTE_Components.h
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/DPO_AIO+DPO_AIO/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
MDK-ARM/tmp/DPO_AIO+DPO_AIO/src/DPO_AIO+DPO_AIO-stamp/: DPO_AIO+DPO_AIO-configure-.cmake  DPO_AIO+DPO_AIO-database-.cmake  DPO_AIO+DPO_AIO-source_dirinfo.txt
MDK-ARM/tmp/DPO_AIO+DPO_AIO/tmp/: DPO_AIO+DPO_AIO-cfgcmd.txt  DPO_AIO+DPO_AIO-mkdirs.cmake
